# ml_eng_picpay

./: .gitignore  Makefile  README.md  main.tf  pyproject.toml  requirements.txt
figuras/: Diagrama 2.drawio  Diagrama.drawio
lambda_punkapi/: template.yaml
lambda_punkapi/hello_world/: app.py
lambda_punkapi/tests/: conftest.py
lambda_punkapi/tests/unit/: test_handler.py
lambdas/: README.md
lambdas/lambda_databeer_transformation/app/: app.py
lambdas/lambda_databeer_transformation/test/: conftest.py
lambdas/lambda_databeer_transformation/test/files/: kinesis_event.json
lambdas/lambda_databeer_transformation/test/unit/: test_app.py  test_handler.py
lambdas/lambda_punkapi/: README.md
lambdas/lambda_punkapi/app/: app.py  requirements.txt
lambdas/lambda_punkapi/tests/: conftest.py
lambdas/lambda_punkapi/tests/files/: punkapi_answer.json
lambdas/lambda_punkapi/tests/unit/: test_app.py  test_handler.py
model/: model.ipynb  retrain.py  utils.py
model/bentoml/: storage.db
model/bentoml/repository/: storage.db
model/bentoml/repository/BeerPredictionService/v1/: Dockerfile  MANIFEST.in  README.md  bentoml.yml  requirements.txt  setup.py
model/notebook/: model.ipynb  utils.py
model/server/: model_server.py
model/serving/: model_server.py  retrain.py
model/utils/: __init__.py
terraform/: README.md
terraform/consulta/: main.tf  variables.tf
terraform/ingestao_dados/: main.tf  variables.tf
terraform/lake/cleaned/: main.tf  output.tf  variables.tf
terraform/lake/kinesis/: main.tf  output.tf
terraform/lake/raw/: main.tf  output.tf
(+5 files in other folders)
