[tool.poetry]
name = "case picpay"
version = "0.1.0"
description = ""
authors = ["Gabriel Barbosa Soares <gabrielclimb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aws-sam-cli = "0.33.1"
BentoML = "^0.13.0"
moto = "2.0.9"
requests = "2.22.0"
pytest = "6.2.4"
fsspec = "^2021.6.0"
boto3 = "^1.17.98"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
